# workshops

oskar_as_a_service/: .gitignore  LICENSE  Makefile  README.md  flow-php-dataset.jsonl  flow-php-dataset_failures_20251218_122515.jsonl  main.py  pyproject.toml  todo.md  topics.jsonl
oskar_as_a_service/containers/: docker-compose.yml
oskar_as_a_service/mlruns/0/: meta.yaml
oskar_as_a_service/notebooks/: testing_models.py
oskar_as_a_service/notebooks/__marimo__/session/: testing_models.py.json
oskar_as_a_service/oskar_as_a_service/: __init__.py  dataset.py  features.py  plots.py
oskar_as_a_service/oskar_as_a_service/modeling/: predict.py  train.py
oskar_as_a_service/prompts/: dsl.json  emmet_sourcing.json  flow_php.json
oskar_as_a_service/reports/: output.txt
