[project]
name = "oskar_as_a_service"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Order of Devs" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.13.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "deepeval>=3.6.9",
    "dvc>=3.63.0",
    "loguru",
    "marimo>=0.17.4",
    "pandas>=2.3.3",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "torch>=2.9.0",
    "tqdm",
    "transformers>=4.57.1",
    "typer",
]


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.uv.workspace]
members = [
    "packages/exploration_models",
]
