[project]
name = "oskar_as_a_service"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Order of Devs" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.13.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "chromadb>=1.3.4",
    "deepeval>=3.6.9",
    "dvc>=3.63.0",
    "gpt4all>=2.8.2",
    "gradio>=5.49.1",
    "jq>=1.10.0",
    "langchain>=1.0.5",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "loguru",
    "marimo>=0.17.4",
    "pandas>=2.3.3",
    "pip",
    "pydantic-ai>=1.24.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "torch>=2.9.0",
    "tqdm",
    "transformers>=4.57.1",
    "typer",
    "emmet_agent",
    "mlflow>=3.6.0",
    "registry_prompt",
    "flow_php_agent",
    "smolagents[litellm,toolkit]>=1.23.0",
]


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.uv.workspace]
members = [
    "packages/exploration_models",
    "packages/preparing_dataset",
    "packages/tunning_model",
    "packages/knowladge_base_rag",
    "packages/chat-ui",
    "packages/flow_php_agent",
    "packages/emmet_agent",
    "containers/packages/registry_prompt",
    "packages/registry_prompt",
]

[tool.uv.sources]
emmet_agent = {workspace = true }
registry_prompt = {workspace = true }
flow_php_agent = {workspace = true }
